--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.10",
     "history": "^5.3.0",
     "husky": "^8.0.3",
+    "kuririn-react-router": "^1.0.3",
     "less": "^4.2.0",
     "lint-staged": "^14.0.1",
     "lodash": "^4.17.21",
