--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "prettier-all": "prettier --write '**/*.{js,jsx,ts,tsx,vue,css,less,scss,md,json}'"
+    "prettier-all": "prettier --write '**/*.{js,jsx,ts,tsx,vue,css,less,scss,md,json}'",
+    "pub": "npm version patch && npm publish"
   },
   "dependencies": {
     "@types/history": "^5.0.0",
@@ -40,5 +41,9 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,vue,css,less,scss,md,json}": "prettier --write"
-  }
+  },
+  "files": [
+    "vite-plugin-rpx2rem/dist"
+  ],
+  "keywords": []
 }
