--- a/vite-plugin-rpx2rem/package.json
+++ b/vite-plugin-rpx2rem/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-plugin-rpx2rem",
-  "version": "1.0.0",
+  "name": "source",
+  "version": "0.0.0",
   "description": "",
   "type": "module",
   "main": "./dist/index.js",
